istio_config_parser/istio_monitor/istio_control_config/virtualservices/default/bookinfo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.istio.io/v1","kind":"VirtualService","metadata":{"annotations":{},"name":"bookinfo","namespace":"default"},"spec":{"gateways":["bookinfo-gateway"],"hosts":["productpage.bookinfo.com"],"http":[{"match":[{"uri":{"exact":"/productpage"}},{"uri":{"prefix":"/static"}},{"uri":{"exact":"/login"}},{"uri":{"exact":"/logout"}},{"uri":{"prefix":"/api/v1/products"}}],"route":[{"destination":{"host":"productpage","port":{"number [...]

      '
  creationTimestamp: '2024-12-09T01:34:32Z'
  generation: 4
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:gateways: {}
        f:http: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: '2024-12-10T02:48:22Z'
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:hosts: {}
    manager: kiali
    operation: Update
    time: '2025-01-07T07:45:27Z'
  name: bookinfo
  namespace: default
  resourceVersion: '329243'
  uid: ea34e520-a81f-4989-b009-41932acf703a
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - productpage.bookinfo.com
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
